[package]
name = "ray_marcher"
version = "0.1.0"
authors = ["Leo Battle <leowbattle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.8"
serde = "1.0.114"
serde_json = "1.0.57"
typetag = "0.1.5"
clap = "2.33.2"
cgmath = { version = "0.17.0", features = ["serde"] }